# static_pages

./: .dockerignore  Cargo.toml  Dockerfile  flake.nix  fly.toml  garnix.yaml  service.nix
src/: main.rs
