[package]
name = "static_pages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
axum = "0.6"
maud = { version = "0.24.0", features = ["axum"] }
rust-embed = "6.4.2"
mime_guess = "2.0.4"
hex = "0.4.3"
pulldown-cmark = "0.9.2"
color-eyre = "0.6.2"
regex = "1.7.0"