[package]
name = "static_pages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39", features = ["full"] }
axum = { version = "0.7", features = ["tracing", "http2", "macros"] }
maud = { version = "0.26", features = ["axum"] }
rust-embed = "8.5"
mime_guess = "2.0.4"
hex = "0.4.3"
pulldown-cmark = "0.11"
color-eyre = "0.6"
regex = "1.10"
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
